fix gallery overflow

--- a/wp-content/themes/happytour/assets/stylus/main.styl
+++ b/wp-content/themes/happytour/assets/stylus/main.styl
@@ -467,6 +467,7 @@ textarea
 	.gallery
 		margin-bottom 1rem
 		position relative
+		overflow hidden
 		img 
 			width 100%
 		.cycle-prev
